﻿zg 24.07.2014 12:53:54 +0200 - build 4023

1. уточнение 4020: в горизонтальном меню не работала активация последнего пункта по shift-f10 и активация меню мышью.

zg 24.07.2014 01:40:17 +0200 - build 4022

1. уточнение 4020: не показываем список окон в горизонтальном меню и граббере.

zg 24.07.2014 00:20:25 +0200 - build 4021

1. удалён неиспользуемый код в оконном менеджере.

zg 23.07.2014 23:11:32 +0200 - build 4020

1. горизонтальное меню и граббер - честные окна.

2. при изменении размеров консоли граббер закрывается. раньше падал.

3. gcc warning.

drkns 23.07.2014 19:55:47 +0200 - build 4019

1. Размер буфера для встроенной функции копирования теперь 32 К, а не 64.

drkns 23.07.2014 03:30:09 +0200 - build 4018

1. Уточнение 3978.

2. В автоназначении горячих клавиш в меню творилась какая-то дичь. Не факт, что поправлено везде.

drkns 22.07.2014 23:18:52 +0200 - build 4017

1. Продолжение 4015:
   - восстановим попытки обработать переполнение стека.

drkns 22.07.2014 20:15:47 +0200 - build 4016

1. 0002741: ECTL_CLEARSESSIONBOOKMARKS приводит к падению

drkns 22.07.2014 01:04:14 +0200 - build 4015

1. Exception mix:
   - обрабатываем std::exception при вызове плагинов
   - неправильно работал вызов отладчика
   - рефакторинг

drkns 21.07.2014 21:28:10 +0200 - build 4014

1. Минус ещё один самодельный список.

svs 21.07.2014 11:49:01 +0400 - build 4013

1. Mantis#0002743: Не хватает ECTL_GETTITLE в дополнение к ECTL_SETTITLE
     ECTL_GETTITLE
     Получить заголовок редактора.
     Param1 - размер буфера в символах, который выделил плагин для данных.
     Param2 указывает на буфер, выделенный плагином, куда будет помещен заголовок редактора.
     Функция возвращает требуемый размер буфера в символах, с учетом завершающего нуля.
     Если Param2 = NULL или Param1 меньше требуемого размера, функция просто вернет необходимый размер буфера. 

zg 20.07.2014 23:32:48 +0200 - build 4012

1. уточнение 4003.

drkns 20.07.2014 21:59:46 +0200 - build 4011
