@@ -434,11 +434,11 @@ bool GetFileFormat(api::File& file, uintptr_t& nCodePage, bool* pSignatureFound,
 			// BUGBUG MSDN documents IS_TEXT_UNICODE_BUFFER_TOO_SMALL but there is no such thing
 			if (ReadSize > 1)
 			{
-				int test = IS_TEXT_UNICODE_UNICODE_MASK | IS_TEXT_UNICODE_REVERSE_MASK | IS_TEXT_UNICODE_NOT_UNICODE_MASK;
+				int test = IS_TEXT_UNICODE_UNICODE_MASK | IS_TEXT_UNICODE_REVERSE_MASK | IS_TEXT_UNICODE_NOT_UNICODE_MASK | IS_TEXT_UNICODE_NOT_ASCII_MASK;
 
 				IsTextUnicode(Buffer.get(), ReadSize, &test); // return value is ignored, it's ok.
 
-				if (!(test & IS_TEXT_UNICODE_NOT_UNICODE_MASK))
+				if (!(test & IS_TEXT_UNICODE_NOT_UNICODE_MASK) && (test & IS_TEXT_UNICODE_NOT_ASCII_MASK))
 				{
 					if (test & IS_TEXT_UNICODE_UNICODE_MASK)
 					{
