@@ -1,4 +1,9 @@
-﻿zg 24.07.2014 12:53:54 +0200 - build 4023
+﻿drkns 24.07.2014 23:19:41 +0200 - build 4024
+
+1. При определении кодовой страницы юникод выбирается только в том случае, если текст явно не похож на ASCII.
+   Должно уменьшиться количество ложных определений юникода (а количество ложных определений ASCII, соответственно, вырасти).
+
+zg 24.07.2014 12:53:54 +0200 - build 4023
 
 1. уточнение 4020: в горизонтальном меню не работала активация последнего пункта по shift-f10 и активация меню мышью.
 
